# cxx-onnxruntime-inference

./: README.md  SampleDetector.cpp  main.txt  onnxruntime_onnx.sln  test.cpp
midas/: inference.py
midas/ev_sdk/: CMakeLists.txt  README.md  run.sh
midas/ev_sdk/3rd/midas/: CMakeLists.txt  run.sh
midas/ev_sdk/3rd/midas/include/: Midas.hpp  Postprocess.hpp  Preprocess.hpp
midas/ev_sdk/3rd/midas/src/: Midas.cpp  Postprocess.cpp  Preprocess.cpp
midas/ev_sdk/test/: test.cpp
midas/model/: get_model.txt
midas/python/: inference.py
midas/python/model/: get_model.txt
paddleocr/C++/: CMakeLists.txt  README.md
paddleocr/C++/include/: text_angle_cls.h  text_det.h  text_rec.h
paddleocr/C++/src/: text_angle_cls.cpp  text_det.cpp  text_rec.cpp
paddleocr/C++/test/: test.cpp
yolov5/: README.md  SampleDetector.hpp  ji.cpp  ji.h  test.cpp
yolov5/ev_sdk/: CMakeLists.txt  README.md  run.sh
yolov5/ev_sdk/3rd/onnxruntime/: README.md
yolov5/ev_sdk/3rd/yolov5/: CMakeLists.txt
yolov5/ev_sdk/3rd/yolov5/include/: Yolov5.hpp
yolov5/ev_sdk/3rd/yolov5/src/: Yolov5.cpp
yolov5/ev_sdk/test/: test.cpp
yolov5/yolov5/: SampleDetector.cpp  SampleDetector.hpp  ji.cpp
